# mcp-streamlit

./: .slugignore  CHANGELOG.md  README.md  app.json  app.py  pyproject.toml  requirements.txt  setup.sh
.streamlit/pages/: 01_Admin_Panel.py
app/: __init__.py
app/core/: __init__.py  mcp_server.py  mcp_tool.py
app/services/: __init__.py  chatbot.py
app/tools/: __init__.py  serper_search.py
app/utils/: auth.py  env.py  logging.py  streamlit_ui.py
config/: auth.yaml
scripts/: release.bat  release.py
